# elephant_memory

./: CMakeLists.txt  PRD.md  PROMPTS.md  README.md
docs/: USER_GUIDE.md
examples/: main.cpp
include/: ElephantMemory.h  ElephantMemory_c.h
src/: ElephantMemory.cpp  ElephantMemory_c.cpp
